# HazardPackage

./: CHANGES.txt  README.md  pyproject.toml  setup.cfg  setup.py
Hazard_Detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: documentation.md
ground_truth_data/: README.md
hazdet/: inference.py  train.py
hazdet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
