[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hazdet"
version = "0.1.1"
# version is already specified above, so removing dynamic
# dynamic = ["version"]
dependencies =[
    "python-dateutil >= 2.8.2",
    "pytz >= 2020.1",
    "scikit-learn==1.3",
    "scipy>=1.10",
    "joblib >= 1.0",
    "sentence-transformers==2.2.2",
    "transformers>=4.32.0,<5.0.0",
    "tqdm",
    "torch>=1.11.0",
    "nltk",
    "sentencepiece",
    "huggingface-hub>=0.15.1, <0.26.0",
    "Pillow",
    "demoji==1.1.0",
    "tensorflow==2.18.0",
    "pandas==2.2.0",
    "numpy >= 1.17,<2.2.0",
    "xgboost==2.1.4"]
requires-python = ">= 3.12"
authors = [
  {name = "Keith Burghardt", email = "keithab@isi.edu"}]
maintainers = [
  {name = "Keith Burghardt", email = "keithab@isi.edu"}
]
description = "Detect hazards within social media text."
readme = "README.md"
license = "MIT"
license-files = ["AUTHORS.md"]
keywords = ["hazard", "nlp", "detection", "social media"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12"]


[project.urls]
Homepage = "https://www.kburg.co/"
Documentation = "https://github.com/KeithBurghardt/HazardPackage/blob/main/README.md"
Repository = "https://github.com/KeithBurghardt/HazardPackage"
Issues = "https://github.com/KeithBurghardt/HazardPackage/issues"
Changelog = "https://github.com/KeithBurghardt/HazardPackage/blob/master/CHANGELOG.md"


