[metadata]
name = hazdet
version = 0.1.1


[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    python-dateutil >= 2.8.2
    pytz >= 2020.1
    scikit-learn==1.3
    scipy>=1.10
    joblib >= 1.0
    sentence-transformers==2.2.2
    transformers>=4.32.0,<5.0.0
    tqdm
    torch>=1.11.0
    nltk
    sentencepiece
    huggingface-hub>=0.15.1, <0.26.0
    Pillow
    pandas==2.2.0
    numpy >= 1.17,<2.2.0
    demoji==1.1.0
    tensorflow==2.18.0
    xgboost==2.1.4
